; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_extent.c_extent_dalloc_gap.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_extent.c_extent_dalloc_gap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@EXTENT_HOOKS_INITIALIZER = common dso_local global i32* null, align 8
@WITNESS_RANK_CORE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @extent_dalloc_gap(i32* %0, %struct.TYPE_5__* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** @EXTENT_HOOKS_INITIALIZER, align 8
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @tsdn_witness_tsdp_get(i32* %9)
  %11 = load i32, i32* @WITNESS_RANK_CORE, align 4
  %12 = call i32 @witness_assert_depth_to_rank(i32 %10, i32 %11, i32 0)
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i64 @extent_register(i32* %13, i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %3
  %18 = load i32*, i32** %4, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @extents_leak(i32* %18, %struct.TYPE_5__* %19, i32** %7, i32* %21, i32* %22, i32 0)
  br label %29

24:                                               ; preds = %3
  %25 = load i32*, i32** %4, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @extent_dalloc_wrapper(i32* %25, %struct.TYPE_5__* %26, i32** %7, i32* %27)
  br label %29

29:                                               ; preds = %24, %17
  ret void
}

declare dso_local i32 @witness_assert_depth_to_rank(i32, i32, i32) #1

declare dso_local i32 @tsdn_witness_tsdp_get(i32*) #1

declare dso_local i64 @extent_register(i32*, i32*) #1

declare dso_local i32 @extents_leak(i32*, %struct.TYPE_5__*, i32**, i32*, i32*, i32) #1

declare dso_local i32 @extent_dalloc_wrapper(i32*, %struct.TYPE_5__*, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
